# zynkode-compute

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: architecture.md
tests/: test_device.py  test_memory.py  test_scheduler.py
zynkode_compute/: __init__.py  device.py  memory.py  runtime.py  scheduler.py  utils.py
