[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zynkode-compute"
version = "0.1.0"
description = "GPU compute orchestration for AMD ROCm/HIP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Zara Quinn", email = "zara.quinn@zynkode.dev"}]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
